# graph-knowledge-store

./: .env.example  .gitignore  Makefile  PLAN.md  README.md  docker-compose.yml  pyproject.toml  start.sh
alembic/: env.py
alembic/versions/: 0ae2c02d6b23_add_chat_sessions_and_messages_tables.py  142c7808aebe_add_manual_topics_and_manual_keywords_.py  2aa29a1bd474_initial_articles_and_embeddings.py  365a89923dca_add_source_flashcard_ids_to_quiz_.py  5f501626bfc1_add_llm_call_logs_table.py  7ee89cbfe563_add_flashcards_table.py  d75901aba6b8_add_quiz_attempts_table.py
app/: config.py  database.py  main.py
app/api/: articles.py  flashcards.py  graph.py  llm.py  llm_logs.py  quiz.py  rag.py  router.py  search.py  upload.py
app/graph/: neo4j_client.py
app/models/: __init__.py  article.py  chat.py  embedding.py  flashcard.py  llm_call_log.py  quiz_attempt.py
app/schemas/: article.py  graph.py  llm_log.py  quiz.py
app/services/: article_service.py  embedding_service.py  extraction_service.py  flashcard_service.py  graph_service.py  llm_observability.py  llm_service.py  quiz_service.py  rag_service.py  search_service.py  spaced_rep.py
docker/: postgres.Dockerfile
docs/: api-reference.md  architecture.md  backup-and-restore.md  configuration.md  data-flow.md  database-schema.md  development.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  theme.ts
frontend/src/api/: client.ts
frontend/src/components/: ArticleCard.tsx  ArticleEditor.tsx  ArticleView.tsx  (+9 more)
scripts/: backup.sh  rebuild_graph.py  restore.sh
(+9 files in other folders)
